# legato

./: .dockerignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  monitoring.md  perf_issue_track.md  platform.yml  protocol_hardening.md
.github/workflows/: ci.yml
crates/legato-client-cache/: Cargo.toml
crates/legato-client-cache/migrations/: 0001_init_client_cache.sql  0002_add_extent_store.sql  0003_drop_block_cache_tables.sql
crates/legato-client-cache/src/: catalog.rs  client_store.rs  lib.rs  schema.rs  segment.rs
crates/legato-client-core/: Cargo.toml
crates/legato-client-core/src/: filesystem.rs  lib.rs  metrics.rs  transport.rs
crates/legato-client-core/tests/: transport.rs
crates/legato-foundation/: Cargo.toml
crates/legato-foundation/src/: config.rs  error.rs  lib.rs  runtime.rs  telemetry.rs
crates/legato-fs-macos/: Cargo.toml
crates/legato-fs-macos/src/: lib.rs
crates/legato-fs-windows/: Cargo.toml  build.rs
crates/legato-fs-windows/src/: lib.rs
crates/legato-prefetch/: Cargo.toml
crates/legato-prefetch/src/: lib.rs  main.rs
crates/legato-prefetch/src/analyzers/: ableton.rs  kontakt.rs  mod.rs  plugin_state.rs  shared.rs
crates/legato-proto/: Cargo.toml  PROTO_VERSIONING.md  build.rs
crates/legato-proto/proto/legato/v1/: legato.proto
crates/legato-proto/src/: lib.rs
crates/legato-server/: Cargo.toml
crates/legato-server/benches/: server_workloads.rs
crates/legato-server/migrations/: 0001_init_server_metadata.sql  0002_add_filesystem_identity.sql  0003_add_layout_catalog_metadata.sql  0004_add_change_log.sql
crates/legato-server/src/: api.rs  bootstrap.rs  canonical.rs  extent.rs  index.rs  invalidation.rs  layout.rs  lib.rs  main.rs  metrics.rs  rpc.rs  schema.rs  tls.rs  watcher.rs
crates/legato-server/tests/: end_to_end.rs
crates/legato-types/: Cargo.toml
crates/legato-types/src/: lib.rs
crates/legatofs/: Cargo.toml
crates/legatofs/src/: main.rs
deploy/: OBSERVABILITY.md  OPERATIONS.md  RELEASE_VALIDATION.md
deploy/client/: README.md  package-macos.sh  package-windows.ps1  validate-macos-package.sh  validate-windows-installer.ps1
deploy/client/config/: certs-README.txt  legatofs.toml.example
deploy/client/macos/: register-client.sh  setup-client.sh
deploy/client/macos/scripts/: postinstall
deploy/client/windows/: installer.iss  register-client.ps1
deploy/release/: validate-local.sh
deploy/server/: Dockerfile  compose.yaml  server.toml.example
deploy/truenas/: create-legato-datasets.sh
docs/: DEVELOPMENT.md  INDEX.md  REPO_STRUCTURE.md
docs/architecture/: SYSTEM_SHAPE.md  TARGET_V1_ARCHITECTURE.md
docs/design/: PROTOCOL_AND_BEHAVIOR.md  TRANSFER_LAYOUT_AND_STORE_MODEL.md  V1_RESET_WORKPLAN.md
