[workspace]
members = [
  "crates/legato-client-cache",
  "crates/legato-client-core",
  "crates/legato-foundation",
  "crates/legato-fs-macos",
  "crates/legato-fs-windows",
  "crates/legato-prefetch",
  "crates/legato-proto",
  "crates/legato-server",
  "crates/legato-types",
  "crates/legatofs",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.95"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
