[package]
name = "legato-client-cache"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-types = { path = "../legato-types" }
rusqlite = { version = "0.37", features = ["bundled"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
