[package]
name = "legato-client-cache"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
blake3 = "1"
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
