[package]
name = "legato-client-cache"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
blake3 = "1"
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
