[package]
name = "legato-client-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-client-cache = { path = "../legato-client-cache" }
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }

[lints]
workspace = true

