[package]
name = "legato-client-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-client-cache = { path = "../legato-client-cache" }
legato-foundation = { path = "../legato-foundation" }
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time"] }
tonic = { version = "0.14", features = ["transport", "tls-ring"] }

[lints]
workspace = true

[dev-dependencies]
legato-server = { path = "../legato-server" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
