[package]
name = "legato-foundation"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
config = { version = "0.15", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
