[package]
name = "legato-fs-windows"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-client-core = { path = "../legato-client-core" }
legato-types = { path = "../legato-types" }

[lints]
workspace = true
