[package]
name = "legato-fs-windows"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-client-core = { path = "../legato-client-core" }
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "windows")'.dependencies]
unifuse = "0.1"

[dev-dependencies]
legato-server = { path = "../legato-server" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
