[package]
name = "legato-fs-windows"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-client-core = { path = "../legato-client-core" }
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }
tokio = { version = "1", features = ["rt", "sync"] }

[target.'cfg(target_os = "windows")'.dependencies]
winfsp = { version = "0.12.4", features = ["system", "windows-61"] }
winfsp-sys = "0.12.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winfsp = { version = "0.12.4", features = ["delayload"] }

[dev-dependencies]
legato-server = { path = "../legato-server" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
