[package]
name = "legato-prefetch"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-foundation = { path = "../legato-foundation" }
legato-types = { path = "../legato-types" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
