[package]
name = "legato-prefetch"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-client-cache = { path = "../legato-client-cache" }
legato-client-core = { path = "../legato-client-core" }
legato-foundation = { path = "../legato-foundation" }
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
