[package]
name = "legato-proto"
build = "build.rs"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
prost = "0.14"
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen", "server"] }
tonic-prost = "0.14"

[lints]
workspace = true

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
