[package]
name = "legato-server"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
blake3 = "1"
legato-foundation = { path = "../legato-foundation" }
legato-proto = { path = "../legato-proto" }
notify = "8"
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5"
flate2 = "1"
legato-client-cache = { path = "../legato-client-cache" }
legato-client-core = { path = "../legato-client-core" }
legato-prefetch = { path = "../legato-prefetch" }
legato-types = { path = "../legato-types" }
tempfile = "3"

[[bench]]
name = "server_workloads"
harness = false
