[package]
name = "legato-server"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-stream = "0.3"
blake3 = "1"
legato-foundation = { path = "../legato-foundation" }
legato-proto = { path = "../legato-proto" }
notify = "8"
rcgen = { version = "0.14", features = ["crypto", "pem", "ring", "x509-parser"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
walkdir = "2"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5"
flate2 = "1"
legato-client-cache = { path = "../legato-client-cache" }
legato-client-core = { path = "../legato-client-core" }
legato-prefetch = { path = "../legato-prefetch" }
legato-types = { path = "../legato-types" }
tempfile = "3"

[[bench]]
name = "server_workloads"
harness = false
