[package]
name = "legato-server"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-stream = "0.3"
blake3 = "1"
legato-foundation = { path = "../legato-foundation" }
legato-client-cache = { path = "../legato-client-cache" }
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }
notify = "8"
rcgen = { version = "0.14", features = ["crypto", "pem", "ring", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
walkdir = "2"

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5"
flate2 = "1"
legato-client-cache = { path = "../legato-client-cache" }
legato-client-core = { path = "../legato-client-core" }
legato-prefetch = { path = "../legato-prefetch" }
tempfile = "3"

[[bench]]
name = "server_workloads"
harness = false
