[package]
name = "legatofs"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-client-cache = { path = "../legato-client-cache" }
legato-client-core = { path = "../legato-client-core" }
legato-foundation = { path = "../legato-foundation" }
legato-fs-macos = { path = "../legato-fs-macos" }
legato-fs-windows = { path = "../legato-fs-windows" }
legato-proto = { path = "../legato-proto" }
legato-types = { path = "../legato-types" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
