[package]
name = "legatofs"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
legato-client-cache = { path = "../legato-client-cache" }
legato-client-core = { path = "../legato-client-core" }
legato-foundation = { path = "../legato-foundation" }
legato-fs-macos = { path = "../legato-fs-macos" }
legato-fs-windows = { path = "../legato-fs-windows" }
legato-prefetch = { path = "../legato-prefetch" }
legato-proto = { path = "../legato-proto" }
legato-server = { path = "../legato-server" }
legato-types = { path = "../legato-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
